Fix. Border collapse on tables

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,7 @@ h2 {
 }
 
 .default table {
+  border-collapse: collapse;
   margin: auto;
 }
 
